--- a/_config.yml
+++ b/_config.yml
@@ -4,25 +4,29 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
-baseurl: ""
+#url: "http://hudaAlamri.github.io"
+#baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
+url: "http://hudaAlamri.github.io/projectname"
+baseurl: "/AVSA"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Audio Visual Scene-Aware Dialog
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+#description: 
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
+  About: "Intorduction"
+  People: "People"
+  Data: "Data"
+  Challenge: "Challenge"
   About Me: "aboutme"
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
@@ -64,18 +68,18 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Huda Alamri
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
-social-network-links:
-  rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+#social-network-links:
+# rss: true
+# email: "someone@example.com"
+# facebook: daattali
+# github: daattali
+# twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
@@ -91,11 +95,11 @@ social-network-links:
 #  yelp: yourname
 
 # Select which share links to show in posts
-share-links-active:
-  twitter: true
-  facebook: true
-  google: false
-  linkedin: true
+#share-links-active:
+ # twitter: true
+ # facebook: true
+ # google: false
+ # linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
