--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 #baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-url: "http://hudaAlamri.github.io/DSTC7-Audio-Visual-Scene-Aware-Dialog-AVSD-Challenge"
+url: "http://hudaAlamri.github.io/website"
 baseurl: ""
 
 # Of course don't forget to change the username and projectname to YOUR username and project
